--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                                                         <td class="listitem"
                                                                             style="padding: 20px 0px 0px 20px;"
                                                                             valign="center"><a
-                                                                                href="tel:+61XXXXXXXX">405.380.8903</a>
+                                                                                href="tel:+4053808903">405.380.8903</a>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
@@ -195,7 +195,7 @@
                                                                                 width="20" /></td>
                                                                         <td valign="center" class="listitem"
                                                                             style="padding: 0px 0px 0px 20px;"><a
-                                                                                href="mailto:info@black.marketing">carriepresley@hey.com</a>
+                                                                                href="mailto:carriepresley@hey.com">carriepresley@hey.com</a>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
@@ -205,7 +205,7 @@
                                                                                 width="20" /></td>
                                                                         <td valign="center" class="listitem"
                                                                             style="padding: 0px 0px 0px 20px;"><a
-                                                                                href="http://www.black.marketing/"
+                                                                                href="https://carriepresley.com/"
                                                                                 target="_blank">www.carriepresley.com</a>
                                                                         </td>
                                                                     </tr>
