--- a/index.html
+++ b/index.html
@@ -109,33 +109,27 @@
                     <!--Signature-->
                     <tr>
                         <td
-                            style="padding: 60px 20px 20px 20px; border-top: 1px solid #4c4c4c; border-bottom: 1px solid #4c4c4c;">
-                            <table border="0" cellpadding="0" cellspacing="0" class="columns">
-                                <tr valign="top">
-                                    <td width="100%" class="columncontainer"
-                                        style="display:block; margin: 0px auto !important;">
-                                    
-                                    </td>
+                       
                                     <td class="columncontainer">
-                                        <table border="0" cellpadding="0" cellspacing="0" width="80%">
+                                        <table border="0" cellpadding="10px" cellspacing="0" width="80%">
                                             <tr>
                                                 <td valign="top">
                                                     <table border="0" cellspacing="0" cellpadding="0">
                                                         <tr
-                                                            style="font-family: sans-serif; font-size: 23px; font-weight: 400; text-transform: uppercase; letter-spacing: 2px; color: #ffffff;">
+                                                            style="font-family: sans-serif; font-size: 23px; font-weight: 400; text-transform: uppercase; letter-spacing: 2px; color: #ffffff; padding-left: 30px;">
                                                             <td class="name">
                                                                 CARRIE PRESLEY
                                                             </td>
                                                         </tr>
                                                         <tr
-                                                            style="font-family: sans-serif; font-size: 12px; text-transform: uppercase; letter-spacing: 1px; color: #999999;">
+                                                            style="font-family: sans-serif; font-size: 12px; text-transform: uppercase; letter-spacing: padding-left: 30px; color: #999999;">
                                                             <td class="role">
                                                                 software developer | content creator accountant
                                                             </td>
                                                         </tr>
                                                         <table>
                                                             <tr>
-                                                                <td valign="center" style="padding: 20px 10px 0 0"><a
+                                                                <td valign="center" style="padding: 20px 10px 0 0; padding-left: 20px;><a
                                                                         href="https://twitter.com/carriepresley15"
                                                                         target="_blank"><img
                                                                             src="https://res.cloudinary.com/carriepresley/image/upload/v1609620274/carriepresley/GitHub%20/twitter_sdoify.png"
@@ -172,7 +166,7 @@
                                                                 <table border="0" cellspacing="0" cellpadding="0">
                                                                     <tr>
                                                                         <td valign="center"
-                                                                            style="padding: 20px 0px 0px 0px;"><img
+                                                                            style="padding: 20px 0px 0px 0px; padding-left: 30px;"><img
                                                                                 src="https://dl.dropboxusercontent.com/s/674fq39tguuo1fo/phone-01.png"
                                                                                 width="20" /></td>
                                                                         <td class="listitem"
@@ -183,7 +177,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td valign="center"
-                                                                            style="padding: 0px 0px 0px 0px;"><img
+                                                                            style="padding: 0px 0px 0px 0px; padding-left: 30px;"><img
                                                                                 src="https://dl.dropboxusercontent.com/s/noujxk45g0sy22p/email-01.png"
                                                                                 width="20" /></td>
                                                                         <td valign="center" class="listitem"
@@ -193,7 +187,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td valign="center"
-                                                                            style="padding: 0px 0px 0px 0px;"><img
+                                                                            style="padding: 0px 0px 0px 0px; padding-left: 30px;"><img
                                                                                 src="https://dl.dropboxusercontent.com/s/ev3xca4945910p9/web-01.png"
                                                                                 width="20" /></td>
                                                                         <td valign="center" class="listitem"
