--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                                         <tr
                                                             style="font-family: sans-serif; font-size: 12px; text-transform: uppercase; letter-spacing: padding-left: 30px; color: #999999;">
                                                             <td class="role">
-                                                                software developer | content creator accountant
+                                                                software developer | content creator | accountant
                                                             </td>
                                                         </tr>
                                                         <table>
@@ -182,7 +182,7 @@
                                                                                 width="20" /></td>
                                                                         <td valign="center" class="listitem"
                                                                             style="padding: 0px 0px 0px 20px;"><a
-                                                                                href="mailto:carriepresley@hey.com">carriepresley@hey.com</a>
+                                                                                href="mailto:carriepresley15@gmail.com">carriepresley15@gmail.com</a>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
